# PassM3nage

./: .gitignore  Cargo.toml  HOW_ing.md  HOW_ita.md  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  errors.rs  lib.rs  main.rs
src/clipboard/: mod.rs  utils.rs
src/crypto/: cipher.rs  kdf.rs  mod.rs
src/tui/: add_entry.rs  lock_screen.rs  main_screen.rs  mod.rs  search.rs
src/vault/: entry.rs  format.rs  mod.rs  storage.rs
